fix: scrollbar fix in css

--- a/portfoliov2-frontend/src/styles/leverviewer.css
+++ b/portfoliov2-frontend/src/styles/leverviewer.css
@@ -1,8 +1,15 @@
+html, body {
+  height: 100%;        
+  margin: 0;           
+  overflow: auto;      
+}
+
+ű
 .fullscreen-container {
   background-image: url('/images/bg.jpg');
-  background-size: cover; 
-  background-position: center; 
-  background-repeat: no-repeat; 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100%;
   z-index: 999;
@@ -10,19 +17,18 @@
 
 
 .canvas-container {
-    position: fixed;
-    top: 50%;
-    left: 50%; 
-    width: 350px; 
-    height: 350px; 
-    transform: translate(-50%, -50%);
-    pointer-events: none; 
-    overflow: hidden; 
-    z-index: 2000; 
-  }
-  
-  .canvas-container canvas {
-    pointer-events: all; 
-  }
-  
- 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 350px;
+  height: 350px;
+  transform: translate(-50%, -50%);
+  pointer-events: none; 
+  overflow: hidden;
+  z-index: 2000;
+}
+
+
+.canvas-container canvas {
+  pointer-events: all; 
+}
